Issue 3: Add negative patch sampling from positive images

--- a/SyntheticData/config.yaml
+++ b/SyntheticData/config.yaml
@@ -1,31 +1,50 @@
 # class we are interested in
 class_name: adidas-long
 
-# run type - only one of these can be true
-run_type:
-  test_positive_patch: true
-  crop_positive_patch: false
-  test_negative_patch_from_positive: false
-  crop_negative_patch_from_positive: false
-  test_negative_patch: false
-  crop_negative_patch: false
-
 # for parallel processing
 max_number_of_threads: 2
 
-# set directories 
+# base folders to which the folder names below will be concatenated
 input_base_folder: /home/evan/Vision/Scripts/TextGeneration/temp/annotation_matlab/input
-positive_input_images:                             images
-positive_input_annotation:                         annotations
-negative_input_images:                             notSetYet
-
 output_base_folder: /home/evan/Vision/Scripts/TextGeneration/temp/annotation_matlab/output
-test_run_results:                                  test_results
-positive_output_patches:                           positive_patch
-negatie_output_patches_from_positive_images:       negative_patch_from_positive
-negative_output_patches:                           notSetYet
+
+runs:
+  crop_positive_patch:
+    current:                                  false
+    input_images_folder:                      images
+    input_annotations_folder:                 annotations
+    output_folder:                            positive_patch
+  crop_negative_patch:
+    current:                                  false
+    input_images_folder:                      images
+    input_annotations_folder:                 none
+    output_folder:                            negative_patch
+  crop_negative_patch_from_positive:
+    current:                                  true
+    input_images_folder:                      images
+    input_annotations_folder:                 annotations
+    output_folder:                            negative_patch
+    number_of_patch_per_image:                5
+  test_positive_patch:
+    current:                                  false
+    input_images_folder:                      images
+    input_annotations_folder:                 annotations
+    output_folder:                            test_results
+  test_negative_patch:
+    current:                                  false
+    input_images_folder:                      images
+    input_annotations_folder:                 none
+    output_folder:                            test_results
+  test_negative_patch_from_positive:
+    current:                                  false
+    input_images_folder:                      images
+    input_annotations_folder:                 annotations
+    output_folder:                            test_results
+    number_of_patch_per_image:                5
+
 
 # for faster operations, provide tempfs location for intermediate computation
+# not used currently
 tempfs: /mnt/tmp/SyntheticData
 
 # dimension for output patches - for now, only squares supported
