--- a/SyntheticData/config.yaml
+++ b/SyntheticData/config.yaml
@@ -15,7 +15,7 @@ runs:
     input_annotations_folder:                 annotations
     output_folder:                            positive_patch
   crop_negative_patch:
-    current:                                  true
+    current:                                  false
     input_images_folder:                      images
     input_annotations_folder:                 none
     include_sub_folders:                      yes
@@ -28,7 +28,7 @@ runs:
     output_folder:                            negative_patch
     number_of_patch_per_image:                5
   test_positive_patch:
-    current:                                  false
+    current:                                  true
     input_images_folder:                      images
     input_annotations_folder:                 annotations
     output_folder:                            test_results
@@ -57,3 +57,10 @@ output_height:   256
 
 # synthetic data setting
 # NOT DONE YET
+
+# data set split for training/testing - has to add up to 1.0
+dataset_split:
+  train: 0.7
+  validation: 0.0
+  test: 0.3
+
