--- a/SyntheticData/config.yaml
+++ b/SyntheticData/config.yaml
@@ -25,10 +25,15 @@ runs:
     current:                                  false
     input_images_folder:                      images
     input_annotations_folder:                 annotations
-    output_folder:                            negative_patch
+    output_folder:                            negative_patch_from_positive
     number_of_patch_per_image:                5
-  test_positive_patch:
+  crop_sliding_window:
     current:                                  true
+    input_images_folder:                      images
+    input_annotations_folder:                 none
+    output_folder:                            sliding_window
+  test_positive_patch:
+    current:                                  false
     input_images_folder:                      images
     input_annotations_folder:                 annotations
     output_folder:                            test_results
@@ -45,6 +50,11 @@ runs:
     input_annotations_folder:                 annotations
     output_folder:                            test_results
     number_of_patch_per_image:                5
+  test_sliding_window:
+    current:                                  false
+    input_images_folder:                      images
+    input_annotations_folder:                 none
+    output_folder:                            test_results
 
 
 # for faster operations, provide tempfs location for intermediate computation
@@ -54,6 +64,14 @@ tempfs: /mnt/tmp/SyntheticData
 # dimension for output patches - for now, only squares supported
 output_width:    256
 output_height:   256
+
+sliding_window:
+    x_stride:                                 128
+    y_stride:                                 128
+    down_scale_times:                         1
+    up_scale_times:                           0
+    scale_factor:                             0.5
+
 
 # synthetic data setting
 # NOT DONE YET
