--- a/SyntheticData/config.yaml
+++ b/SyntheticData/config.yaml
@@ -26,12 +26,12 @@ runs:
     output_folder:                            negative_patch_from_positive
     number_of_patch_per_image:                5
   crop_sliding_window:
-    current:                                  false
+    current:                                  true
     input_images_folder:                      images
     input_annotations_folder:                 none
     output_folder:                            sliding_window
   test_positive_patch:
-    current:                                  true
+    current:                                  false
     input_images_folder:                      images
     input_annotations_folder:                 annotations
     output_folder:                            test_results
@@ -63,12 +63,13 @@ tempfs: /mnt/tmp/SyntheticData
 output_width:    256
 output_height:   256
 
+# original size is run no matter what
 sliding_window:
     x_stride:                                 128
     y_stride:                                 128
-    down_scale_times:                         1
-    up_scale_times:                           0
-    scale_factor:                             0.5
+    down_scale_times:                         3
+    up_scale_times:                           1
+    scale_factor:                             0.2
 
 
 # synthetic data setting
