Issue 3: Fix typo for video running

--- a/ruby/config.yaml
+++ b/ruby/config.yaml
@@ -2,7 +2,7 @@
 class_name: adidas-long
 
 # for parallel processing - currently, it uses all processors
-multi_threaded: false
+multi_threaded: true
 
 # temporary location for khajuri and caffe paths - will get
 # these from environment variable in the future
