Issue 5, 6, 7: Fix patch generation issues

--- a/ruby/config.yaml
+++ b/ruby/config.yaml
@@ -22,6 +22,9 @@ positive_patch:
   folders:
     image_input:                              images
     annotation_input:                         annotations
+  # reccommended: the area of min_object_dimensions be at least 5%
+  # of area of extracted patch - signal to noise needs to be at least 5%
+  min_object_area_fraction:                   0.05
   transformations:
     jiggles:
       fraction_to_keep:                       0.5
@@ -31,7 +34,7 @@ positive_patch:
       num_shear:                              5
     scaling:
       down_scale_times:                       3
-      up_scale_times:                         1
+      up_scale_times:                         3
       scale_factor:                           0.2
 
 # generate negative patches from annotated positive images
@@ -61,7 +64,7 @@ sliding_window:
     x_stride:                                 128
     y_stride:                                 128
     down_scale_times:                         3
-    up_scale_times:                           1
+    up_scale_times:                           3
     scale_factor:                             0.2
 
 # Video testing configuration - in addition to sliding window above
