Issue 29: Enable only specific class extraction during patch extraction

--- a/python/PatchExtraction/config.yaml
+++ b/python/PatchExtraction/config.yaml
@@ -49,3 +49,8 @@ positive_patch:
       # fraction of all patches in which to blend another image patch
       # NOTE: not implemented yet
       blend_fraction:                         0.1
+
+# patches for following classes are extracted
+extraction_labels:
+  - 'adidas'
+  - 'sony'
